<resources>
    <string name="app_name">Incidencia</string>
    <string name="title_activity_menu">Menu</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- App Strings spanish -->
    <!-- -->
    <!-- Main Activity -->
    <string name="bLogin">Acceder</string>
    <string name="logging">Accediendo</string>
    <string name="failed">Autentificación faillida</string>
    <string name="remember">Recordar contraseña</string>
    <string name="hint">Usuario</string>

    <!-- Menu Fragment-->
    <string name="bAdd">Añadir</string>
    <string name="bDelete">Borrar</string>
    <string name="bListar">Listar</string>
    <string name="bHelp">Ayuda</string>

    <!-- Dialog Box-->
    <string name="dialogMessage">Esta acción borrará todas las incidencias. ¿Estás seguro?</string>
    <string name="dialogTitle">¡Aviso!</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="toast">Inciendencias Borradas</string>

    <!-- Add Fragment-->
    <string name="title">Título</string>
    <string-array name="priority">
        <item>Baja</item>
        <item>Media</item>
        <item>Alta</item>
    </string-array>
    <string name="description">Descripción</string>

    <!-- Settings -->
    <string name="lang">Idioma</string>
    <string name="choose">Escoge un idioma</string>
    <string name="en">Inglés</string>
    <string name="sp">Español</string>
    <string name="logOut">Salir</string>
    <string name="priority">Prioridad</string>
    <string name="date">Fecha</string>
    <string name="status">Pendiente</string>
    <string name="assigned">Assignado</string>
    <string name="done">Realizado</string>
    <string name="delete1">Estás a punto de borrar la incidencia.</string>
    <string name="deleteOne">Mantener pulsado para borrar</string>
    <string name="deleteOneDialog">¿Estás seguro de querer borrar la incidencia</string>

    <string name="all">Todo</string>
    <string-array name="statusFilter">
        <item>@string/all</item>
        <item>@string/status</item>
        <item>@string/assigned</item>
        <item>@string/done</item>
    </string-array>

    <!-- help -->
    <string name="first">El primer botón sirve para listar las incidencias que tenemos actualmente.</string>
    <string name="first1">En la lista se permite filtrar pot el estado con el filtrado de arriba a la derecha.</string>
    <string name="first2">En caso de querer borrar una incidencia en concreto, se ha de mantener pulsado</string>
    <string name="first3">Se puede clicar cada incidencia para verlas con más detalle</string>
    <string name="first4">Para cambiar el estado, se tiene que clicar sobre el mismo y esta cambiará automáticamente.</string>
    <string name="second">El segundo botón nos permite añadir nuevas incidencias a la base de datos.</string>
    <string name="third">El tercer botón borrará todas las incidencias.</string>.
    <string name="fourth">El símbolo de arriba a la derecha es la configuración, permite cambiar de idioma y cerrar sesión</string>


</resources>