<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Help"
    android:background="@drawable/item_container"
    android:layout_margin="20dp"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp">
        </Space>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first1"
            android:layout_marginLeft="15dp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp">
        </Space>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first2"
            android:layout_marginLeft="15dp"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp">
        </Space>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first3"
            android:layout_marginLeft="15dp"/>

         <Space
            android:layout_width="match_parent"
            android:layout_height="20dp">
        </Space>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first4"
            android:layout_marginLeft="30dp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp">
        </Space>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/second" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp">
        </Space>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/third" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp">
        </Space>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fourth" />
    </LinearLayout>

</FrameLayout>