<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/color0">

    <Button
        android:id="@+id/button_guardar"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="84dp"
        android:text="@string/bLogin"
        android:textColor="@color/color0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TXTPassword"
        android:background="@drawable/item_container"/>

    <EditText
        android:id="@+id/TXTUsername"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/main_buttons_mini"
        android:ems="10"
        android:hint="@string/hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vLogin" />

    <EditText
        android:id="@+id/TXTPassword"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TXTUsername"
        android:background="@drawable/main_buttons_mini"/>

    <TextView
        android:id="@+id/vLogin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:clickable="false"
        android:text="LOGIN"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14pt"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/TXTUsername"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TXTResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_guardar" />

    <CheckBox
        android:id="@+id/remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/remember"
        android:buttonTint="@color/white"
        android:textColor="@color/white"
        android:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="@+id/TXTPassword"
        app:layout_constraintTop_toBottomOf="@+id/TXTPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>